--- a/FAQ.html
+++ b/FAQ.html
@@ -7,7 +7,7 @@
     <!-- BOOTSTRAP AND FONT AWESOME CSS LINKS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-   <link rel="stylesheet" href="/CSS/faqstyle.css">
+   <link rel="stylesheet" href="faqstyle.css">
    <style>
      .footer {
     background-color: #333;
